force-app/main/default/objects/Inbound_Record__c/Inbound_Record__c.object-meta.xml
<CustomObject>
    <label>Inbound Record</label>
    <nameField>
        <displayFormat>ID-{00000000}</displayFormat>
        <label>IR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>