force-app/main/default/objects/Inbound_Record__c/fields/Father_Email__c.field-meta.xml
<CustomField>
    <fullName>Father_Email__c</fullName>
    <label>Father Email</label>
    <type>Email</type>
</CustomField>