force-app/main/default/objects/Inbound_Record__c/fields/Guardian_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Relationship__c</fullName>
    <label>Guardian Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>