force-app/main/default/objects/Inbound_Record__c/fields/Mother_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Mother_Birthdate__c</fullName>
    <label>Mother Birthdate</label>
    <type>Date</type>
</CustomField>