force-app/main/default/objects/Inbound_Record__c/fields/Mother_Email__c.field-meta.xml
<CustomField>
    <fullName>Mother_Email__c</fullName>
    <label>Mother Email</label>
    <type>Email</type>
</CustomField>