force-app/main/default/objects/Inbound_Record__c/fields/Mother_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Full_Name__c</fullName>
    <label>Mother Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>